# gradsync-ml

./: README.md  compile_proto.sh  main.py  pyproject.toml  temp_requirements.txt
examples/: cluster.json  simple_vit.py  simple_vit_no_dist.py
src/gradsync/common/: hardware.py
src/gradsync/comms/: __init__.py  client.py  server.py
src/gradsync/comms/proto/: tensor_service.proto
src/gradsync/compression_lab/: __init__.py  tensor_compression-new.py  tensor_compression.py  tensor_compression_new.py
src/gradsync/orchestrator/: __init__.py  client.py  node.py  server.py  states.py
src/gradsync/orchestrator/proto/: cluster_service.proto
src/gradsync/pipeline/: __init__.py  core.py  runner.py  utils.py
src/gradsync/telemetry/: __init__.py  client.py  dashboard.py  profiler.py  server.py  tracker.py
tests/: test_core.py  test_integration.py  test_node.py  test_server.py
