[project]
name = "gradsync-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "grpcio>=1.50.0",
    "grpcio-tools>=1.50.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "numpy>=1.22.0",
    "zstandard>=0.25.0",
    "pytest>=9.0.3",
    "psutil>=7.2.2",
]
